fix(rtl-option): add text-alignment to rtl option

--- a/src/plugins/header/options/option/direction.less
+++ b/src/plugins/header/options/option/direction.less
@@ -1,11 +1,13 @@
-.uip-root {  
+.uip-root {
   & > .uip-preview {
     direction: ltr;
+    text-align: left;
   }
 
   &.rtl-direction {
     & > .uip-preview {
       direction: rtl;
+      text-align: right;
     }
   }
 }
